# robot-policy-evidence-contracts

./: .gitignore  CITATION.cff  LICENSE-CODE.md  LICENSE-CONTENT.md  LICENSE.md  README.md  claim_map.md  evidence_matrix.md  manuscript.md  pyproject.toml  review_protocol.md
examples/: audit_fixed_policy_set.py
figures/: Fig1.eps  Fig2.eps  Fig3.eps  generate_review_figures.js
src/agc_aerotrace/: __init__.py  model.py  simulation.py
src/agc_basil/: __init__.py  assets.py  experiment.py  n0_feasibility.py
src/agc_bastion/: __init__.py  certificate.py  g1.py  natural.py
src/agc_continual/: __init__.py  environment.py  rlrd_adapter.py  training.py
src/agc_fence/: __init__.py  experiment.py
src/agc_flux/: __init__.py  g1_simulation.py  inverse.py  simulation.py
src/agc_rlrd/: __init__.py  certification.py  g0.py  guard.py  metrics.py  n0_analysis.py  n0_contract.py  planning.py  profiles.py  protocol.py
src/agc_saver/: __init__.py  environment.py  n0.py
src/agc_scope/: __init__.py  capacity.py
src/robot_policy_evidence_contracts/: __init__.py  bounds.py  provenance.py  ranking.py
tests/: test_aerotrace.py  test_aerotrace_simulation.py  test_basil.py  test_basil_assets.py  test_basil_n0_feasibility.py  test_bastion.py  test_bastion_g1.py  test_bastion_natural.py  test_continual.py  test_contracts.py  test_fence.py  test_flux.py  test_flux_g1_simulation.py  test_flux_simulation.py  test_rlrd.py  test_saver.py  test_scope.py
