[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-policy-evidence-contracts"
version = "0.5.0"
description = "Auditable research-code primitives for robot-policy risk and evidence checks"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Yuan Liao"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
test = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/yongganzuoziji0818/robot-policy-evidence-contracts"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
